--- a/helpother.html
+++ b/helpother.html
@@ -59,14 +59,16 @@
 
 <script>
   // Your Firebase config (replace with your actual config)
-  const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_AUTH_DOMAIN",
-    projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_STORAGE_BUCKET",
-    messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-    appId: "YOUR_APP_ID"
-  };
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDhRxge6bboRAfgmrk4H13Hto77wpHhUvI",
+  authDomain: "adviceboard-24b4a.firebaseapp.com",
+  projectId: "adviceboard-24b4a",
+  storageBucket: "adviceboard-24b4a.firebasestorage.app",
+  messagingSenderId: "757700138636",
+  appId: "1:757700138636:web:8935154a3fa81f003e8da9",
+  measurementId: "G-83FFVJND7C"
+};
 
   // Initialize Firebase
   const app = firebase.initializeApp(firebaseConfig);
