--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
             <!-- User-submitted advice will appear here -->
         </div>
     </main>
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+
 
 <script>
   // Your Firebase config (replace with your actual config)
