--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@ const firebaseConfig = {
   measurementId: "G-83FFVJND7C"
 };
 
-  // Initialize Firebase
-  const app = firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
+ firebase.initializeApp(firebaseConfig);
+
+// Initialize Firestore
+const db = firebase.firestore();
 </script>
 
 <script>
