--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@ const firebaseConfig = {
 
 // Initialize Firestore
 const db = firebase.firestore();
+
+const adviceCollection = db.collection('adviceBoard');
+
 </script>
 
 <script>
