--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <header>
-        <h1>Community Advice Board</h1>
+        <h1>قدم نصيحة</h1>
     </header>
     <main>
         <form id="adviceForm">
