--- a/index.html
+++ b/index.html
@@ -4,40 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advice Board</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-        }
-        header {
-            background-color: #4CAF50;
+        /* Style for the creator button */
+        .creator-button {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 10px 20px;
+            background-color: #007bff;
             color: white;
-            padding: 1rem;
-            text-align: center;
-        }
-        main {
-            padding: 1rem;
-        }
-        form {
-            margin-bottom: 2rem;
-        }
-        .advice {
-            border: 1px solid #ccc;
-            padding: 1rem;
-            margin-bottom: 1rem;
-            background-color: #fff;
+            border: none;
             border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
         }
-        .advice h3 {
-            margin: 0 0 0.5rem;
+        .creator-button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>قدم نصيحة</h1>
+        <h1>Community Advice Board</h1>
     </header>
     <main>
         <form id="adviceForm">
@@ -54,14 +43,17 @@
             <!-- User-submitted advice will appear here -->
         </div>
     </main>
-   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 
+    <!-- Button for showing the creator's name -->
+    <button class="creator-button" onclick="showCreatorName()">Creator</button>
 
-<script>
-  // Your Firebase config (replace with your actual config)
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+
+    <script>
+        // Initialize Firebase
+       const firebaseConfig = {
   apiKey: "AIzaSyDhRxge6bboRAfgmrk4H13Hto77wpHhUvI",
   authDomain: "adviceboard-24b4a.firebaseapp.com",
   projectId: "adviceboard-24b4a",
@@ -71,63 +63,64 @@ const firebaseConfig = {
   measurementId: "G-83FFVJND7C"
 };
 
- firebase.initializeApp(firebaseConfig);
+        firebase.initializeApp(firebaseConfig);
 
-// Initialize Firestore
-const db = firebase.firestore();
+        // Initialize Firestore
+        const db = firebase.firestore();
+        const adviceCollection = db.collection('adviceBoard');
 
-const adviceCollection = db.collection('adviceBoard');
+        // Handle form submission
+        const adviceForm = document.getElementById('adviceForm');
+        adviceForm.addEventListener('submit', async function(event) {
+            event.preventDefault();
 
-</script>
+            const name = document.getElementById('name').value;
+            const advice = document.getElementById('advice').value;
 
-<script>
-   // Handle form submission
-adviceForm.addEventListener('submit', async function(event) {
-    event.preventDefault(); // Prevent form from refreshing the page
+            try {
+                // Add the advice to Firestore
+                await adviceCollection.add({
+                    name: name,
+                    advice: advice,
+                    timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                });
 
-    const name = document.getElementById('name').value;
-    const advice = document.getElementById('advice').value;
-
-    try {
-        // Add the advice to Firestore
-        await adviceCollection.add({
-            name: name,
-            advice: advice,
-            timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                console.log('Advice successfully submitted!');
+                adviceForm.reset();
+            } catch (error) {
+                console.error('Error submitting advice:', error);
+            }
         });
 
-        console.log('Advice successfully submitted!');
-        adviceForm.reset();
-    } catch (error) {
-        console.error('Error submitting advice:', error);
-    }
-});
+        // Real-time listener
+        const adviceList = document.getElementById('adviceList');
+        adviceCollection.orderBy('timestamp', 'desc').onSnapshot(snapshot => {
+            adviceList.innerHTML = ''; // Clear the list
+            snapshot.forEach(doc => {
+                const adviceData = doc.data();
 
-// Real-time listener
-adviceCollection.orderBy('timestamp', 'desc').onSnapshot(snapshot => {
-    adviceList.innerHTML = ''; // Clear the list
-    snapshot.forEach(doc => {
-        const adviceData = doc.data();
+                // Create advice entry
+                const adviceDiv = document.createElement('div');
+                adviceDiv.classList.add('advice');
 
-        // Create advice entry
-        const adviceDiv = document.createElement('div');
-        adviceDiv.classList.add('advice');
+                const adviceName = document.createElement('h3');
+                adviceName.textContent = adviceData.name;
 
-        const adviceName = document.createElement('h3');
-        adviceName.textContent = adviceData.name;
+                const adviceText = document.createElement('p');
+                adviceText.textContent = adviceData.advice;
 
-        const adviceText = document.createElement('p');
-        adviceText.textContent = adviceData.advice;
+                adviceDiv.appendChild(adviceName);
+                adviceDiv.appendChild(adviceText);
 
-        adviceDiv.appendChild(adviceName);
-        adviceDiv.appendChild(adviceText);
+                adviceList.appendChild(adviceDiv);
+            });
+            console.log('Advice list updated!');
+        });
 
-        adviceList.appendChild(adviceDiv);
-    });
-    console.log('Advice list updated!');
-});
-
-  </script>
-  
+        // Show the creator's name
+        function showCreatorName() {
+            alert("Website created by: Your Name Here");
+        }
+    </script>
 </body>
 </html>
