--- a/index.html
+++ b/index.html
@@ -5,29 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advice Board</title>
     <style>
-        /* Style for the creator button */
-        .creator-button {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .creator-button:hover {
-            background-color: #0056b3;
-        }
-    </style>
-    <style>
+        /* General Styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
+            color: #333;
         }
         header {
             background-color: #4CAF50;
@@ -51,12 +35,66 @@
         .advice h3 {
             margin: 0 0 0.5rem;
         }
+        button {
+            cursor: pointer;
+        }
+
+        /* Dark Mode Styles */
+        body.dark-mode {
+            background-color: #121212;
+            color: #f9f9f9;
+        }
+        body.dark-mode header {
+            background-color: #333;
+        }
+        body.dark-mode .advice {
+            background-color: #333;
+            border-color: #555;
+        }
+        body.dark-mode button {
+            background-color: #444;
+            color: white;
+        }
+
+        /* Creator Button Styles */
+        .creator-button {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        .creator-button:hover {
+            background-color: #0056b3;
+        }
+
+        /* Dark Mode Toggle Button */
+        .dark-mode-toggle {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        .dark-mode-toggle:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>قدم نصيحة</h1>
     </header>
+    <button class="dark-mode-toggle" onclick="toggleDarkMode()">Dark Mode</button>
+    <button class="creator-button" onclick="showCreatorName()">Creator</button>
     <main>
         <form id="adviceForm">
             <label for="name">Your Name:</label><br>
@@ -72,83 +110,84 @@
             <!-- User-submitted advice will appear here -->
         </div>
     </main>
-    <button class="creator-button" onclick="showCreatorName()">Creator</button>
    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 
+    <script>
+        // Your Firebase config (replace with your actual config)
+        const firebaseConfig = {
+            apiKey: "AIzaSyDhRxge6bboRAfgmrk4H13Hto77wpHhUvI",
+            authDomain: "adviceboard-24b4a.firebaseapp.com",
+            projectId: "adviceboard-24b4a",
+            storageBucket: "adviceboard-24b4a.firebasestorage.app",
+            messagingSenderId: "757700138636",
+            appId: "1:757700138636:web:8935154a3fa81f003e8da9",
+            measurementId: "G-83FFVJND7C"
+        };
 
-<script>
-  // Your Firebase config (replace with your actual config)
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyDhRxge6bboRAfgmrk4H13Hto77wpHhUvI",
-  authDomain: "adviceboard-24b4a.firebaseapp.com",
-  projectId: "adviceboard-24b4a",
-  storageBucket: "adviceboard-24b4a.firebasestorage.app",
-  messagingSenderId: "757700138636",
-  appId: "1:757700138636:web:8935154a3fa81f003e8da9",
-  measurementId: "G-83FFVJND7C"
-};
+        firebase.initializeApp(firebaseConfig);
 
- firebase.initializeApp(firebaseConfig);
+        // Initialize Firestore
+        const db = firebase.firestore();
+        const adviceCollection = db.collection('adviceBoard');
 
-// Initialize Firestore
-const db = firebase.firestore();
+        // Handle form submission
+        const adviceForm = document.getElementById('adviceForm');
+        adviceForm.addEventListener('submit', async function(event) {
+            event.preventDefault();
 
-const adviceCollection = db.collection('adviceBoard');
+            const name = document.getElementById('name').value;
+            const advice = document.getElementById('advice').value;
 
-</script>
+            try {
+                // Add the advice to Firestore
+                await adviceCollection.add({
+                    name: name,
+                    advice: advice,
+                    timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                });
 
-<script>
-   // Handle form submission
-adviceForm.addEventListener('submit', async function(event) {
-    event.preventDefault(); // Prevent form from refreshing the page
-
-    const name = document.getElementById('name').value;
-    const advice = document.getElementById('advice').value;
-
-    try {
-        // Add the advice to Firestore
-        await adviceCollection.add({
-            name: name,
-            advice: advice,
-            timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                console.log('Advice successfully submitted!');
+                adviceForm.reset();
+            } catch (error) {
+                console.error('Error submitting advice:', error);
+            }
         });
 
-        console.log('Advice successfully submitted!');
-        adviceForm.reset();
-    } catch (error) {
-        console.error('Error submitting advice:', error);
-    }
-});
+        // Real-time listener
+        const adviceList = document.getElementById('adviceList');
+        adviceCollection.orderBy('timestamp', 'desc').onSnapshot(snapshot => {
+            adviceList.innerHTML = ''; // Clear the list
+            snapshot.forEach(doc => {
+                const adviceData = doc.data();
 
-// Real-time listener
-adviceCollection.orderBy('timestamp', 'desc').onSnapshot(snapshot => {
-    adviceList.innerHTML = ''; // Clear the list
-    snapshot.forEach(doc => {
-        const adviceData = doc.data();
+                // Create advice entry
+                const adviceDiv = document.createElement('div');
+                adviceDiv.classList.add('advice');
 
-        // Create advice entry
-        const adviceDiv = document.createElement('div');
-        adviceDiv.classList.add('advice');
+                const adviceName = document.createElement('h3');
+                adviceName.textContent = adviceData.name;
 
-        const adviceName = document.createElement('h3');
-        adviceName.textContent = adviceData.name;
+                const adviceText = document.createElement('p');
+                adviceText.textContent = adviceData.advice;
 
-        const adviceText = document.createElement('p');
-        adviceText.textContent = adviceData.advice;
+                adviceDiv.appendChild(adviceName);
+                adviceDiv.appendChild(adviceText);
 
-        adviceDiv.appendChild(adviceName);
-        adviceDiv.appendChild(adviceText);
+                adviceList.appendChild(adviceDiv);
+            });
+            console.log('Advice list updated!');
+        });
 
-        adviceList.appendChild(adviceDiv);
-    });
-    console.log('Advice list updated!');
-});
-   function showCreatorName() {
+        // Show Creator's Name
+        function showCreatorName() {
             alert("جميع الحقوق تعود الى :( Almutasam-Alsharqi )");
         }
-  </script>
-  
+
+        // Dark Mode Toggle
+        function toggleDarkMode() {
+            document.body.classList.toggle('dark-mode');
+        }
+    </script>
 </body>
 </html>
